--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# This is a comment to test git config.
 # dependencies
 /node_modules
 
@@ -78,4 +79,3 @@ typings/
 
 # dotenv environment variables file
 .env
-
