--- a/package.json
+++ b/package.json
@@ -15,19 +15,27 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "nodemon": "^1.18.3",
     "react-scripts": "1.0.13",
+    "style-loader": "^0.23.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.7"
   },
+  "peerDependencies": {
+    "@babel/core": "^7.0.0"
+  },
   "scripts": {
     "serve-api": "nodemon server/server.js &",
-    "serve-client": "webpack-dev-server --display-error-details --config webpack.config.js",
+    "serve-client": "cd client && webpack-dev-server --display-error-details --config ../webpack.config.js",
     "dev": "yarn run serve-api && yarn run serve-client"
   }
 }
