--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "babel-loader": "^8.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
     "react-scripts": "1.0.13",
+    "style-loader": "^0.23.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.7"
