--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
     "babel-loader": "^8.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -24,6 +23,9 @@
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.7"
+  },
+  "peerDependencies": {
+    "babel-core": "^6.26.3"
   },
   "scripts": {
     "serve-api": "nodemon server/server.js &",
