--- a/package.json
+++ b/package.json
@@ -10,26 +10,13 @@
     "knex": "^0.13.0",
     "method-override": "^2.3.10",
     "morgan": "^1.9.0",
-    "pg": "^7.3.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "pg": "^7.3.0"
   },
   "devDependencies": {
-    "babel-loader": "^8.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "nodemon": "^1.18.3",
-    "react-scripts": "1.0.13",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7"
-  },
-  "peerDependencies": {
-    "babel-core": "^6.26.3"
+    "nodemon": "^1.18.3"
   },
   "scripts": {
     "serve-api": "nodemon server/server.js &",
-    "serve-client": "webpack-dev-server --display-error-details --config webpack.config.js",
-    "dev": "yarn run serve-api && yarn run serve-client"
+    "dev": "yarn run serve-api && cd client && yarn run serve-client"
   }
 }
