--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "babel-loader": "^8.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -16,9 +17,9 @@
     "webpack-dev-server": "^3.1.7"
   },
   "peerDependencies": {
-    "babel-core": "^6.26.3"
+    "@babel/core": "^6.26.3"
   },
   "scripts": {
-    "serve-client": "webpack-dev-server --display-error-details --config webpack.config.js",
+    "serve-client": "webpack-dev-server --display-error-details --config webpack.config.js"
   }
 }
