--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,9 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "babel-loader": "^8.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/preset-env":"^7.0.0",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-react": "^7.0.0",
     "css-loader": "^1.0.0",
     "react-scripts": "1.0.13",
     "style-loader": "^0.23.0",
