--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "pg": "^7.3.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.2.0",
     "jest": "^23.5.0",
     "nodemon": "^1.18.3"
   },
