--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
-    "jest": "^23.5.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.3"
   },
   "scripts": {
     "serve-api": "nodemon server/server.js &",
     "dev": "yarn run serve-api && cd client && yarn run serve-client",
-    "test": "jest ./server"
+    "test": "mocha ./server/test --exit"
   }
 }
