--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "supertest": "^3.3.0"
   },
   "scripts": {
     "serve-api": "nodemon server/server.js &",
