--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
+    "eslint": "^5.5.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.11.1",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.3",
+    "prettier": "1.14.2",
     "supertest": "^3.3.0"
   },
   "scripts": {
