--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.2",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.3",
     "prettier": "1.14.2",
@@ -27,6 +29,10 @@
   "scripts": {
     "serve-api": "nodemon server/server.js &",
     "dev": "yarn run serve-api && cd client && yarn run serve-client",
-    "test": "mocha ./server/test"
+    "test": "mocha ./server/test",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": ["eslint --fix", "git add"]
   }
 }
