--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.2",
-    "bookshelf": "^0.10.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "knex": "^0.13.0",
@@ -34,6 +33,9 @@
     "prepush": "yarn run test"
   },
   "lint-staged": {
-    "*.js": ["eslint --fix", "git add"]
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
