--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "serve-api": "nodemon server/server.js &",
     "dev": "yarn run serve-api && cd client && yarn run serve-client",
-    "test": "mocha ./server/test",
+    "test": "NODE_ENV=test mocha ./server/test",
     "precommit": "lint-staged",
     "prepush": "yarn run test"
   },
