--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,11 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.0",
     "css-loader": "^1.0.0",
+    "jest": "^23.6.0",
     "react-scripts": "1.0.13",
     "style-loader": "^0.23.0",
     "webpack": "^4.17.1",
@@ -24,6 +27,7 @@
     "@babel/core": "^6.26.3"
   },
   "scripts": {
-    "serve-client": "webpack-dev-server --display-error-details --config webpack.config.js"
+    "serve-client": "webpack-dev-server --display-error-details --config webpack.config.js",
+    "test": "jest"
   }
 }
