--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,15 @@
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-bridge.0",
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.1.0",
     "@babel/preset-env": "^7.0.0",
-    "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.0",
     "css-loader": "^1.0.0",
     "jest": "^23.6.0",
-    "react-scripts": "1.0.13",
     "style-loader": "^0.23.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
@@ -24,6 +24,6 @@
   },
   "scripts": {
     "serve-client": "webpack-dev-server --display-error-details --config webpack.config.js",
-    "test": "jest"
+    "test": "jest --config jest.config.js"
   }
 }
