--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,10 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.0",
     "css-loader": "^1.0.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-15": "^1.1.0",
     "jest": "^23.6.0",
+    "react-test-renderer": "15",
     "style-loader": "^0.23.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
