--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^1.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-15": "^1.1.0",
+    "fetch-mock": "^7.0.5",
     "jest": "^23.6.0",
     "react-test-renderer": "15",
     "style-loader": "^0.23.0",
