--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
   },
   "scripts": {
     "serve-client": "webpack-dev-server --display-error-details --config webpack.config.js",
-    "test": "jest --config jest.config.js"
+    "test": "jest --config jest.config.js",
+    "build": "webpack --config webpack.config.js"
   }
 }
