--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "dev": "yarn run serve-api && cd client && yarn run serve-client",
     "test": "NODE_ENV=test npx nyc --reporter=html --reporter=text mocha ./server/test",
     "precommit": "lint-staged",
-    "prepush": "yarn run test"
+    "prepush": "yarn run test",
+    "start": "node server/index.js && cd client && yarn run build"
   },
   "lint-staged": {
     "*.js": [
