--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "webpack-dev-server": "^3.1.7"
   },
   "scripts": {
-    "serve-client": "webpack-dev-server --display-error-details --config webpack.config.js",
+    "start": "webpack-dev-server --display-error-details --config webpack.config.js",
     "test": "jest --config jest.config.js",
     "build": "webpack --config webpack.config.js"
   }
