--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "style-loader": "^0.23.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7"
+    "webpack-dev-server": "^3.1.7",
+    "webpack-merge": "^4.1.4"
   },
   "scripts": {
     "start": "webpack-dev-server --display-error-details --config webpack.config.js",
