--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.0",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-15": "^1.1.0",
     "fetch-mock": "^7.0.5",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "react-test-renderer": "15",
     "style-loader": "^0.23.0",
@@ -28,8 +30,8 @@
     "webpack-merge": "^4.1.4"
   },
   "scripts": {
-    "start": "webpack-dev-server --display-error-details --config webpack.config.js",
+    "start": "webpack-dev-server --display-error-details --open --config webpack.dev.js",
     "test": "jest --config jest.config.js",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.prod.js"
   }
 }
