--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "supertest": "^3.3.0"
   },
   "scripts": {
-    "build-client": "cd ./client && yarn build",
+    "build-client": "cd ./client && yarn run build",
     "dev": "yarn run serve-client && nodemon ./server/index.js",
     "test": "NODE_ENV=test npx nyc --reporter=html --reporter=text mocha ./server/test",
     "precommit": "lint-staged",
     "prepush": "yarn run test",
     "postinstall": "cd ./client && yarn",
     "serve-client": "cd ./client && yarn start",
-    "start": "yarn run build-client && node ./server/index.js"
+    "start": "yarn run build-client && node ./server/index.js",
+    "test-client": "cd ./client && yarn test"
   },
   "lint-staged": {
     "*.js": [
