Figure out git hook later

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "dev": "yarn run serve-client & nodemon ./server/index.js",
     "test": "NODE_ENV=test npx nyc --reporter=html --reporter=text mocha ./server/test",
     "precommit": "lint-staged",
-    "prepush": "yarn run test && yarn run build-client && cd ..",
+    "prepush": "yarn run test",
     "postinstall": "cd ./client && yarn",
     "serve-client": "cd ./client && yarn start",
     "start": "node server",
