Comment out postinstall script and repair heroku-build script (previously moved webpack from devdependencies to dependencies in client)

--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "test": "NODE_ENV=test npx nyc --reporter=html --reporter=text mocha ./server/test",
     "precommit": "lint-staged",
     "prepush": "yarn run test",
-    "postinstall": "cd ./client && yarn",
+    "postinstall": "echo Commenting out postinstall script: 'cd ./client && yarn'",
     "serve-client": "cd ./client && yarn start",
     "start": "node server",
-    "heroku-postbuild": "cd ./client && yarn",
+    "heroku-postbuild": "yarn run build-client",
     "test-client": "cd ./client && yarn test"
   },
   "lint-staged": {
