--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,6 @@
   "scripts": {
     "start": "webpack-dev-server --display-error-details --open --config webpack.dev.js",
     "test": "jest --config jest.config.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack -p --config webpack.prod.js --progress"
   }
 }
