--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.3.1",
-    "webpack": "^4.17.1"
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
@@ -25,7 +26,6 @@
     "jest": "^23.6.0",
     "react-test-renderer": "15",
     "style-loader": "^0.23.0",
-    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.7",
     "webpack-merge": "^4.1.4"
   },
