--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "react-router-dom": "^4.3.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "html-webpack-plugin": "^3.2.0",
+    "clean-webpack-plugin": "^0.1.19"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
@@ -18,12 +20,10 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.0",
-    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-15": "^1.1.0",
     "fetch-mock": "^7.0.5",
-    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "react-test-renderer": "15",
     "style-loader": "^0.23.0",
