--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "build-client": "cd ./client && yarn run build",
     "dev": "yarn run serve-client & nodemon ./server/index.js",
-    "test": "NODE_ENV=test npx nyc --reporter=html --reporter=text mocha ./server/test",
+    "test": "NODE_ENV=test npx nyc --reporter=html --reporter=text mocha ./server/dist/test",
     "precommit": "lint-staged",
     "prepush": "yarn run test",
     "postinstall": "cd ./client && yarn",
