--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,6 +3,11 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "es6",
-    "noImplicitAny": true
-  }
+    "noImplicitAny": true,
+    "outDir": "./dist",
+    "allowJs": true
+  },
+  "include": [
+    "./src/**/*"
+  ]
 }
