--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "pg": "^7.3.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.6",
+    "@types/chai-http": "^3.0.5",
+    "@types/eslint": "^4.16.3",
+    "@types/eslint-plugin-prettier": "^2.2.0",
+    "@types/mocha": "^5.2.5",
+    "@types/prettier": "^1.13.2",
+    "@types/supertest": "^2.0.6",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
     "eslint": "^5.5.0",
