--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nodemon": "^1.18.3",
     "nyc": "^13.0.1",
     "prettier": "1.14.2",
-    "supertest": "^3.3.0"
+    "supertest": "^3.3.0",
+    "typescript": "^3.1.1"
   },
   "scripts": {
     "build-client": "cd ./client && yarn run build",
