--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.6",
     "@types/chai-http": "^3.0.5",
+    "@types/errorhandler": "^0.0.32",
     "@types/eslint": "^4.16.3",
     "@types/eslint-plugin-prettier": "^2.2.0",
     "@types/mocha": "^5.2.5",
@@ -30,6 +31,7 @@
     "@types/supertest": "^2.0.6",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
+    "errorhandler": "^1.5.0",
     "eslint": "^5.5.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-prettier": "^2.6.2",
@@ -40,8 +42,7 @@
     "nodemon": "^1.18.3",
     "nyc": "^13.0.1",
     "prettier": "1.14.2",
-    "supertest": "^3.3.0",
-    "typescript": "^3.1.1"
+    "supertest": "^3.3.0"
   },
   "scripts": {
     "build-client": "cd ./client && yarn run build",
