First commit on this branch. We're consolidating all the code into 'server.ts' because we need to get it working first, then wrangle the TS module system.

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "esnext",
+    "target": "ESNext",
     "noImplicitAny": true,
     "outDir": "./dist",
     "allowJs": true
