--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/supertest": "^2.0.6",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
+    "concurrently": "^4.0.1",
     "errorhandler": "^1.5.0",
     "eslint": "^5.5.0",
     "eslint-config-prettier": "^3.0.1",
@@ -46,17 +47,28 @@
     "typescript": "^3.1.3"
   },
   "scripts": {
-    "build-client": "cd ./client && yarn run build",
-    "build-server": "tsc",
-    "dev": "yarn run serve-client & nodemon ./server/dist/index.js",
-    "test": "NODE_ENV=test npx nyc --reporter=html --reporter=text mocha ./server/dist/test",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "serve": "node server/dist/server.js",
+    "serve-debug": "nodemon --inspect server/dist/index.js",
+    "watch-node": "nodemon server/dist/server.js",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"yarn run watch-ts\" \"yarn run watch-node\"",
+    "watch-test": "yarn run test -- --watchAll",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "copy-static-assets": "ts-node copyStaticAssets.ts",
+    "start": "yarn run build && yarn run serve && yarn run serve-client",
+    "build": "yarn run build-ts && yarn run tslint && yarn run copy-static-assets",
+    "debug": "yarn run build && yarn run watch-debug",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"yarn run watch-ts\" \"yarn run serve-debug\"",
+    "test": "NODE_ENV=test nyc --reporter=html --reporter=text mocha server/dist/test",
     "precommit": "lint-staged",
     "prepush": "yarn run test",
-    "postinstall": "cd ./client && yarn",
-    "serve-client": "cd ./client && yarn start",
-    "start": "node server/dist/index.js",
+    "build-client": "cd client && yarn run build",
+    "dev": "yarn run serve-client & nodemon server/dist/index.js",
+    "postinstall": "cd client && yarn",
+    "serve-client": "cd client && yarn start",
     "heroku-postbuild": "yarn run build-client",
-    "test-client": "cd ./client && yarn test"
+    "test-client": "cd client && yarn test"
   },
   "lint-staged": {
     "*.js": [
