--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "typescript": "^3.1.3"
   },
   "scripts": {
-    "build-ts": "tsc",
-    "watch-ts": "tsc -w",
-    "serve": "node server/dist/server.js",
+    "build-ts": "tsc -b server",
+    "watch-ts": "tsc -w -p server",
+    "serve": "node server/dist/index.js",
     "serve-debug": "nodemon --inspect server/dist/index.js",
-    "watch-node": "nodemon server/dist/server.js",
+    "watch-node": "nodemon server/dist/index.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"yarn run watch-ts\" \"yarn run watch-node\"",
     "watch-test": "yarn run test -- --watchAll",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
