--- a/client/package.json
+++ b/client/package.json
@@ -3,30 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.3.1",
     "@babel/core": "^7.1.0",
     "@babel/plugin-transform-modules-commonjs": "^7.1.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
+    "@types/react-router-dom": "^4.3.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.0",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.3.1",
     "style-loader": "^0.23.0",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
-    "webpack-merge": "^4.1.4",
-    "html-webpack-plugin": "^3.2.0",
-    "clean-webpack-plugin": "^0.1.19"
+    "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^23.6.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-15": "^1.1.0",
     "fetch-mock": "^7.0.5",
     "jest": "^23.6.0",
     "react-test-renderer": "15",
+    "source-map-loader": "^0.2.4",
     "webpack-dev-server": "^3.1.7"
   },
   "scripts": {
