--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,6 +3,7 @@
         "outDir": "./dist/",
         "noImplicitAny": true,
         "module": "commonjs",
+        "lib": ["es6"],
         "target": "es5",
         "sourceMap": true,
         "jsx": "react"
