--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/eslint-plugin-prettier": "^2.2.0",
     "@types/mocha": "^5.2.5",
     "@types/prettier": "^1.13.2",
+    "@types/shelljs": "^0.8.0",
     "@types/supertest": "^2.0.6",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
@@ -43,7 +44,10 @@
     "nodemon": "^1.18.3",
     "nyc": "^13.0.1",
     "prettier": "1.14.2",
+    "shelljs": "^0.8.2",
     "supertest": "^3.3.0",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.3"
   },
   "scripts": {
