--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
     "watch-node": "nodemon server/dist/index.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"yarn run watch-ts\" \"yarn run watch-node\"",
     "watch-test": "yarn run test -- --watchAll",
-    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "tslint": "tslint -c server/tslint.json -p server/tsconfig.json",
     "copy-static-assets": "ts-node copyStaticAssets.ts",
-    "start": "yarn run build && yarn run serve && yarn run serve-client",
+    "start": "yarn run build && yarn run serve & yarn run serve-client",
     "build": "yarn run build-ts && yarn run tslint && yarn run copy-static-assets",
     "debug": "yarn run build && yarn run watch-debug",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"yarn run watch-ts\" \"yarn run serve-debug\"",
