--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "jest": "^23.6.0",
     "react-test-renderer": "15",
     "source-map-loader": "^0.2.4",
+    "ts-jest": "^23.10.4",
     "webpack-dev-server": "^3.1.7"
   },
   "scripts": {
