--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "outDir": "./dist/",
+        "allowJs": true,
         "noImplicitAny": true,
         "module": "commonjs",
         "lib": ["es6", "dom"],
