--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,9 @@
     "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-15": "^1.0.3",
+    "@types/react-test-renderer": "^16.0.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^23.6.0",
     "enzyme": "^3.6.0",
