--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/enzyme": "^3.1.15",
     "@types/enzyme-adapter-react-15": "^1.0.3",
+    "@types/fetch-mock": "^6.0.4",
     "@types/jest": "^23.3.9",
     "@types/react-test-renderer": "^16.0.3",
     "awesome-typescript-loader": "^5.2.1",
